Atualizacao da API

--- a/Debug/net8.0/web.config
+++ b/Debug/net8.0/web.config
@@ -5,8 +5,8 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\SisC.Api.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+      <aspNetCore processPath=".\SisC.Api.exe" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
     </system.webServer>
   </location>
 </configuration>
-<!--ProjectGuid: CCEFEFB5-DCC8-471C-B801-17D44FC2821E-->
+<!--ProjectGuid: ccefefb5-dcc8-471c-b801-17d44fc2821e-->
